src/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: 'myFont';
    src: url(./Sinosuke.otf);
    font-style: normal;
    font-weight: 600;
}

body {
    width: 100vw;
    height: 100vh;
    padding: 20px 10px;
    color: #fff;
    font-family:'Courier New', Courier, monospace;

    background-image: url(https://i.redd.it/yss7h9xgbgt71.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
}

header {
    padding: 20px 20px;
    margin: 0px auto;
    min-width: 375px;
    max-width: 600px;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(8px);
    border-radius: 50px;
    border-left: rgba(255, 255, 255, 0.3), 1px, solid;;
    border-top: rgba(255, 255, 255, 0.4), 1px, solid;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.089);
}

nav {
    display: flex;
    justify-content: space-evenly;
    background-color: rgba(0, 0, 0, 0);
}

nav button {
    display: block;
    color: white;
    cursor: pointer;
    border: none;
    font-size: 1.3em;
    background-color: transparent;
    padding: 5px 10px;
    position: relative;
    overflow: hidden; 
}

nav button::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0;
    height: 2px;
    background-color: white;
    transition: width 0.3s ease-out;
}

nav button:hover::after,
nav button:focus::after {
    width: 100%;
}

#heading {
    font-size: 3rem;
    font-family: 'myFont';
    text-align: center;
    margin-top: 40px;
}

#content {
    min-width: 375px;
    max-width: 1022px;
    padding: 40px;
    margin: 50px auto;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(15px);
    border-radius: 30px;
    border-left: rgba(255, 255, 255, 0.3), 1px, solid;;
    border-top: rgba(255, 255, 255, 0.4), 1px, solid;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.089);
}

.page-heading {
    font-family: 'myFont';
    text-align: center;
    font-size: 3rem;
}

footer {
    font-size: 1.2em;
    text-align: center;
}

footer a {
    color: red;
    text-decoration: none;
}

footer a:hover {
    transition: ease-out 0.3s;
    color: rgb(255, 149, 149);
}

/* Home Page */

.home-content {
    font-size: 1.5em;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.home-info-div {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

/* Menu Page */

.menu-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 40px;
}

.menu-card-parent {
    display: flex;
    flex-wrap: wrap;
    gap: 40px;
}

.menu-card {
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 30px;
    padding: 30px;
    max-width: 450px;
    background-color: rgba(255, 255, 255, 0.3);
}

.menu-card:hover,
.menu-card:focus {
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
    transition: ease .3s;
}

.dish-image {
    border-radius: 20px;
    height: 250px;
    width: 100%;
}

.dish-details {
    padding-top: 17px;
    padding-bottom: 8px;
    display: flex;
    justify-content: space-between;
}

/* About Page */

.about-us-content {
    font-size: 1.5em;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.about-us-image {
    border-radius: 25px;
    width: 100%;
    max-width: 700px;
}

.about-us-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.about-us-content div {
    padding: 20px;
}

/* Contact Page */

.other-contact-heading {
    font-size: 2em;
    margin-top: 40px;
    margin-bottom: 25px;
}

.contact-form {
    margin-top: 20px;
    display: flex;
    flex-direction: column; 
    gap: 15px;
    padding: 20px;
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 30px;
}

.contact-form label {
    font-size: 1.3em;
    font-weight: bold;
    margin-bottom: 5px; 
}

.contact-form input,
.contact-form textarea {
    width: 100%;
    padding: 12px;
    border: 0px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
    background-color: rgba(0, 0, 0, 0.16);
    color: #fff;
    border-radius: 10px;
    font-size: 1.1em;
}

.contact-form input:focus,
.contact-form textarea:focus {
    border: 0px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.8);
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.068);
    outline: none;
}

.contact-form textarea {
    resize: vertical;
    min-height: 120px;
    max-width: 100%;
}

.contact-form button {
    background-color: #2ecc70bd;
    color: white;
    padding: 14px 25px;
    border: none;
    border-radius: 10px;
    font-size: 1.1em;
    cursor: pointer;
    margin-top: 10px;
    align-self: center;
}

.contact-form button:hover {
    background-color: #28b663;
    transform: translateY(-2px);
    transition: ease 0.5s;
}

.contact-details-list {
    list-style: none;
    padding: 0;
    margin-top: 20px;
    line-height: 1.8;
    color: rgba(255, 255, 255, 0.555);
    font-size: 1.1em;
}

.contact-details-list strong {
    color: rgba(255, 255, 255);
}

.contact-details-list li {
    margin-bottom: 8px;
}

.contact-details-list a {
    color: inherit;
    text-decoration: underline;
}

.contact-details-list a:hover {
    color: rgba(255, 255, 255, 0.8);
    text-decoration: underline;
}

